# aegis

./: Cargo.toml  Dockerfile  README.md  go.mod  main.go
src/: db.rs  main.rs  server.rs
