[package]
name = "aegis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
axum = "0.6.18"
tokio = { version = "1.28.2", features = ["full"] }
